# crimm

./: .gitignore  Atom.py  AtomSelector.py  Bond.py  ChMMCIF2Dict.py  ChMMCIFParser.py  Chain.py  ChainExceptions.py  ChainSuperimposer.py  ChmStructureBuilder.py  CoordManipulator.py  ICBuilder.py  Looper.py  MANIFEST.in  Model.py  NGLVisualization.py  OMMAdaptors.py  PRMParser.py  PeptideChain.py  README  README.md  RTFParser.py  Residue.py  ResidueExceptions.py  Structure.py  TopoDefinitions.py  TopoElements.py  charmm_rtf.ipynb  common_utils.py  create_structure.py  env.yaml  pyproject.toml  relooper.py  setup.py  test_pdb_standard.py
.github/workflows/: static.yml
Adaptors/: OMMAdaptors.py
crimm/: Fetchers.py  Utils.py  __init__.py
crimm/Adaptors/: OMMAdaptors.py  OpenBabelAdaptors.py  PropKaAdaptors.py  RDKitAdaptor.py  RDKitConverter.py  __init__.py  charmm_struct_prep.py  pyCHARMMAdaptors.py
crimm/Data/: __init__.py  cgenff_mass_dict.py  components_dict.py  connect_records.py  constants.py  element_dict.py  ptable.py  water_coords.npy
crimm/Data/probes/: __init__.py  probes.py
crimm/Data/toppar/: carb.rtf  carb_glycopeptide.prm  carb_glycopeptide.rtf  cgenff.prm  cgenff.rtf  ethers.rtf  label_fluorophore.prm  label_fluorophore.rtf  label_spin.prm  label_spin.rtf  lipid_cholesterol.prm  lipid_cholesterol.rtf  lipid_sphingo.prm  lipid_sphingo.rtf  moreions.prm  moreions.rtf  na.rtf  na_rna_modified.prm  na_rna_modified.rtf  polymer_solvent.prm  polymer_solvent.rtf  prot.rtf  prot_heme.prm  prot_heme.rtf  prot_modify_res.prm  prot_modify_res.rtf  synthetic_polymer.prm  synthetic_polymer.rtf  water_ions.prm  water_ions.rtf
crimm/Docking/: DXGridUtil.py  FFTDocker.py  GridGenerator.py  GridShapes.py  __init__.py
crimm/GridGen/: GridGenerator.py  _grid_gen_wrappers.py
crimm/IO/: CRDParser.py  CRDWriter.py  MMCIF2Dict.py  MMCIFParser.py  PDBParser.py  PDBString.py  PRMParser.py  PSFReader.py  PSFWriter.py  RTFParser.py  StructureBuilder.py  __init__.py
crimm/Modeller/: CoordManipulator.py  CrystalSDF.py  GridGenerator.py  LonePairBuilder.py  LoopBuilder.py  Looper.py  ParamLoader.py  SeqChainGenerator.py  Solvator.py  TopoFixer.py  TopoLoader.py  __init__.py
crimm/Parsers/: MMCIF2Dict.py  MMCIFParser.py  PRMParser.py  RTFParser.py  StructureBuilder.py
crimm/StructEntities/: Atom.py  Chain.py  Model.py  OrganizedModel.py  Residue.py  Structure.py  TopoDefinitions.py  TopoElements.py  __init__.py
crimm/Superimpose/: ChainSuperimposer.py  __init__.py
crimm/TopoEntities/: TopoDefinitions.py  TopoElements.py
crimm/Utils/: StructureUtils.py  __init__.py  cuda_avail.py  cuda_info.py  query_db.py
crimm/Visualization/: NGLVisualization.py  __init__.py  py3DmolVis.py
crimm/data/toppar/: top_all36_2_prot.rtf
docs/: api.rst  conf.py
docs/_build/html/: api.html  (+7 more)
src/: fft_correlate.c  fft_correlate_batch.c  fft_setup.py  grid_gen.c  grid_gen.cu  grid_gen_simple.c  lig_grid_gen.c
src/fft_docking/: fft_correlate.c  fft_correlate.h  fft_setup.py  grid_gen.c  grid_gen.cu  grid_gen.h  lig_grid_gen.c  py_bindings.c  rank_poses.c  rank_poses.h  test_fft2.py
tests/: benchmark_pipeline.py  conftest.py  test_psf_crd_loader.py  test_psf_crd_manipulation.py
tutorials/: 1.StructureBasics.ipynb  2.FetchStructures.ipynb  3.AlanineTripeptide.ipynb  4.Topology.ipynb  5.LoopBuilding.ipynb  6.ProtonationState.ipynb  CHARMMLoader.ipynb  CharmmPDBLoader.ipynb  ContactMap.ipynb  ContactSite.ipynb  PointMutation.ipynb
(+4 files in other folders)
