[build-system]
requires = ["setuptools>=59.0", "numpy>=1.21.2"]
build-backend = "setuptools.build_meta"

[project]
name = "crimm"
version = "2026.1.1"
authors = [
  { name="Truman Xu", email="ziqiaoxu@umich.edu" },
  { name="Stanislav Cherepanov", email="stanislc@umich.edu" },
]
description = "Chemistry with the ReInvented Macromolecular Mechanics"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "biopython>=1.80",
    "ipywidgets>=8",
    "nglview>=3.1",
    "scipy>=1.10",
    "requests>=2.28",
    "pandas>=1.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]

[project.optional-dependencies]
protonation = ["propka>=3.5.1"]
cheminformatics = ["rdkit"]
all = ["propka>=3.5.1", "rdkit"]

[project.urls]
"Homepage" = "https://github.com/BrooksResearchGroup-UM/crimm"
"Bug Tracker" = "https://github.com/BrooksResearchGroup-UM/crimm/issues"

[tool.setuptools.packages.find]
where = ["./"]
exclude = [
    "src",
    "__pycache__",
    ".ipynb_checkpoints",
    "*.egg-info",
    "tests"
]
namespaces = false
